🚧 fix wrap in container

--- a/src/app/shared/components/dinamyc-views/card-view/card-view.component.scss
+++ b/src/app/shared/components/dinamyc-views/card-view/card-view.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   padding: 3.4rem;
   background: var(--color-primary-sidebar);
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   gap: 3rem;
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
